Fixed alignment

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,7 +1,3 @@
-html {
-    overflow-y: scroll;
-}
-
 body {
     color: white;
     background-color: #003153; /*Prussian Blue*/
@@ -12,15 +8,11 @@ p {
 b {
     color: #B3A369; /*Tech Gold*/
 }
-
 .nav.navbar-nav.navbar-left li a {
     color: #B3A369; /*Tech Gold*/
 }
 .navbar-inverse .navbar-brand {
     color: #B3A369; /*Tech Gold*/
-}
-.navbar-inverse {
-    margin-bottom: 100px;
 }
 .navbar-brand {
     position: absolute;
@@ -44,7 +36,7 @@ b {
    margin:50px;
 }
 .header {
-   margin:50px;
+   margin:100px;
 }
 .resume-section {
     margin-bottom:100px;
